--- a/MBlogApp/MBlogApp.Android/MBlogApp.Android.csproj
+++ b/MBlogApp/MBlogApp.Android/MBlogApp.Android.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\loading.json" />
+    <AndroidAsset Include="Assets\loadingdot.json" />
+    <AndroidAsset Include="Assets\loadingdot2.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
