--- a/MBlogApp/MBlogApp.Android/MBlogApp.Android.csproj
+++ b/MBlogApp/MBlogApp.Android/MBlogApp.Android.csproj
@@ -67,6 +67,7 @@
     <AndroidAsset Include="Assets\loading.json" />
     <AndroidAsset Include="Assets\loadingdot.json" />
     <AndroidAsset Include="Assets\loadingdot2.json" />
+    <AndroidAsset Include="Assets\WelcomeMblog.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
